--- a/Raspisanie web/Raspisanie 1/Raspisanie.csproj
+++ b/Raspisanie web/Raspisanie 1/Raspisanie.csproj
@@ -48,8 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="listview.cs">
-    </Compile>
+    <Compile Include="avia\listview_avia.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,8 +102,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="strwork_elec.cs" />
+    <Compile Include="electron\strwork_elec.cs" />
     <Compile Include="Zvuk.cs" />
+    <Compile Include="avia\strwork_avia.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\elec_form.gif" />
