--- a/Raspisanie web/Raspisanie 1/Raspisanie.csproj
+++ b/Raspisanie web/Raspisanie 1/Raspisanie.csproj
@@ -49,6 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="avia\strwork_avia.cs" />
+    <Compile Include="mini_elec.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="mini_elec.Designer.cs">
+      <DependentUpon>mini_elec.cs</DependentUpon>
+    </Compile>
+    <Compile Include="time_srvn.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +100,10 @@
       <DependentUpon>Form4.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="mini_elec.resx">
+      <DependentUpon>mini_elec.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -114,12 +125,14 @@
     </Compile>
     <Compile Include="electron\strwork_elec.cs" />
     <Compile Include="train\strwork_train.cs" />
+    <Compile Include="electron\worklist.cs" />
     <Compile Include="Zvuk.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\head.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\DataSources\Raspisanie.time_srvn.datasource" />
     <None Include="Resources\elec_form.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
